修bu'g 循环依赖